WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152175
Modern IDB: storage/indexeddb/index-count.html fails
https://bugs.webkit.org/show_bug.cgi?id=152175
Summary
Modern IDB: storage/indexeddb/index-count.html fails
Brady Eidson
Reported
2015-12-11 09:28:03 PST
Modern IDB: storage/indexeddb/index-count.html fails This is basically the IDBIndex version of
https://bugs.webkit.org/show_bug.cgi?id=152167
Attachments
Patch v1
(5.45 KB, patch)
2015-12-11 09:47 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-11 09:47:04 PST
Created
attachment 267171
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-11 11:14:00 PST
Comment on
attachment 267171
[details]
Patch v1 Clearing flags on attachment: 267171 Committed
r193968
: <
http://trac.webkit.org/changeset/193968
>
WebKit Commit Bot
Comment 3
2015-12-11 11:14:03 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4
2015-12-11 15:36:15 PST
Comment on
attachment 267171
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=267171&action=review
> Source/WebCore/Modules/indexeddb/client/IDBIndexImpl.cpp:142 > + return doCount(*context, IDBKeyRangeData::allKeys(), ec);}
I suggest moving the end brace to the next line.
Brady Eidson
Comment 5
2015-12-11 15:55:21 PST
(In reply to
comment #4
)
> Comment on
attachment 267171
[details]
> Patch v1 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=267171&action=review
> > > Source/WebCore/Modules/indexeddb/client/IDBIndexImpl.cpp:142 > > + return doCount(*context, IDBKeyRangeData::allKeys(), ec);} > > I suggest moving the end brace to the next line.
Yikes! By saying "I suggest..." you're being too kind. :) Fixed in
https://trac.webkit.org/changeset/193991
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug