Modern IDB: storage/indexeddb/index-count.html fails. https://bugs.webkit.org/show_bug.cgi?id=152175

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/client/IDBIndexImpl.cpp:
(WebCore::IDBClient::IDBIndex::count): If the passed in IDBKeyRange* is nullptr, use IDBKeyRangeData::allKeys.
(WebCore::IDBClient::IDBIndex::doCount): Change an isNull check to a more correct !isValid() check.

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/index-count-expected.txt:
* storage/indexeddb/modern/index-get-count-failures-expected.txt:


Canonical link: https://commits.webkit.org/170300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193968 268f45cc-cd09-0410-ab3c-d52691b4dbfc